# blprs

./: .gitignore  CNAME  Cargo.toml  README.md  _config.yml  guides.md  index.md  quickstart.md  theory.md
_includes/: header.html
_layouts/: default.html
css/: styles.css
src/: data.rs  demand.rs  error.rs  estimation.rs  formulation.rs  integration.rs  lib.rs  options.rs  solving.rs
tests/: pyblp_parity.rs
