[package]
name = "blprs"
version = "0.0.1"
edition = "2024"
description = "Fast Berry–Levinsohn–Pakes (BLP) estimation for random coefficients logit models"
license = "MIT"
repository = "https://github.com/emaadmanzoor/blprs"
documentation = "https://docs.rs/blprs"
readme = "README.md"
authors = ["Emaad Manzoor <emaadmanzoor@gmail.com>"]
keywords = ["econometrics", "blp", "optimization"]
categories = ["science", "algorithms", "mathematics"]

[dependencies]
log = "0.4"
nalgebra = { version = "0.32", features = ["serde-serialize"] }
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
rand = { version = "0.8", features = ["std", "small_rng"] }
rand_distr = "0.4"

[dev-dependencies]
approx = "0.5"
criterion = "0.5"
serde_json = "1.0"

[lib]
name = "blprs"
crate-type = ["rlib"]
